name:                haskify
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskify#readme
license:             BSD3
license-file:        LICENSE
author:              John Kastner and Colin Burr
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Haskify, Types
  build-depends:       base >= 4.7 && < 5, wreq, lens, aeson, lens-aeson
                     , base64-bytestring, text, time
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable haskify-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskify
  default-language:    Haskell2010

test-suite haskify-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskify
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskify
